Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69615

Bluetooth on Windows: service is not discoverable even when paired.

    XMLWordPrintable

Details

    • WinRT
    • 04a94a42ae0e4ec645e909a6b005723bbd4d443d a22807beee00050ebf04f069cdf0ea4ab40ebbf9

    Description

      After pairing an android device to a Windows 10 (#1803) machine, if you try the Bluetooth pingpong example, it does not work when Windows is acting as the server. It works the opposite way i.e. if Android acts as the server.

      Attachments

        For Gerrit Dashboard: QTBUG-69615
        # Subject Branch Project Status CR V

        Activity

          People

            owolff Oliver Wolff
            matirai Philippe
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes