Fix classic device discovery on Android

It seems recent Android releases (at least confirmed for Android 9)
require location permission for classic device discovery. Previously,
it was only required for BTLE discovery.

This patch ensures the permission check is done for every type
of device discovery on Android.

Task-number: QTBUG-69615
Change-Id: I9596c083ecfd9b5e861c1aa5e9900bab5f44237f
Reviewed-by: BogDan Vatra <bogdan@kdab.com>
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>